<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_juegoimagenesdiferentes">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/negro">

        <ImageView
            android:id="@+id/fondoVerde"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="2dp"
            android:contentDescription="@string/fondoV"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fondoAzul"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:color/holo_green_light" />

        <ImageView
            android:id="@+id/fondoAzul"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:contentDescription="@string/fondoA"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fondoVerde"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/tvAntes"
            android:layout_width="293dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/imageview"
            android:text="@string/lehen"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fondoAzul"
            app:layout_constraintHorizontal_bias="0.615"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/descFotoAhora"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="@+id/fondoAzul"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="28dp"
            android:contentDescription="@string/descFotoAhora"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/descFotoAntes"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/gd" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/descFotoAntes"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/fondoAzul"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/gee" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="22dp"
            android:contentDescription="@string/descFotoAhora"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/imageView11"
            app:layout_constraintStart_toStartOf="@+id/fondoAzul"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/gee" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/descFotoAntes"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/fondoAzul"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gf" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/descFotoAntes"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/fondoAzul"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/gcc" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/gb" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/ga" />

        <TextView
            android:id="@+id/tvDespues"
            android:layout_width="292dp"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/imageview"
            android:text="@string/orain"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/fondoAzul"
            app:layout_constraintHorizontal_bias="0.916"
            app:layout_constraintStart_toStartOf="@+id/fondoAzul" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:contentDescription="@string/descFotoAhora"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:srcCompat="@drawable/gbb" />


        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            android:contentDescription="@string/descFotoAhora"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11"
            app:srcCompat="@drawable/gdd" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="22dp"
            android:contentDescription="@string/descFotoAhora"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/imageView10"
            app:layout_constraintStart_toEndOf="@+id/fondoVerde"
            app:layout_constraintTop_toTopOf="@+id/fondoAzul"
            app:srcCompat="@drawable/gcc" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>